--- a/assets/jsons/projects.json
+++ b/assets/jsons/projects.json
@@ -3,6 +3,7 @@
         "name": "cREDIT",
         "description": "A credit literacy game designed to educate users about credit scores and financial literacy.\nIt is based on Soviet Russia after The Great Depression",
         "technologies": ["Python", "Figma"],
+        "highlight": "./assets/images/cREDIT.png",
         "repository": "https://github.com/ReverseToshi/HackNotts24",
         "liveDemo": "https://ReverseToshi.github.io/portfolio-website"
     },
@@ -10,6 +11,7 @@
         "name": "Graphing tool",
         "description": "A c++ program that allows user to graph functions and equations.\nIt is a simple tool that can be used to visualize mathematical functions.",
         "technologies": ["C++", "wxWidgets"],
+        "highlight":"./assets/images/cREDIT.png",
         "repository": "https://github.com/ReverseToshi/Graphing-tool",
         "liveDemo": "https://ReverseToshi.github.io/task-manager"
     },
@@ -17,6 +19,7 @@
         "name": "Motorola 68k Simulator",
         "description": "A cedar logic program that simulates the Motorola 68k microprocessor.\nIt is a simple tool that can be used to visualize the inner workings of the microprocessor.",
         "technologies": ["Cedar Logic", "C++"],
+        "highlight":"./assets/images/CPU.png",
         "repository": "https://github.com/ReverseToshi/Motorola-68k",
         "liveDemo": "https://ReverseToshi.github.io/weather-app"
     },
@@ -24,6 +27,7 @@
         "name": "Hotel Management System",
         "description": "A hotel management system that allows user to manage hotel bookings and reservations.\nIt is a simple tool that can be used to manage hotel bookings.",
         "technologies": ["Python", "sqlite3", "tkinter"],
+        "highlight":"./assets/images/cREDIT.png",
         "repository": "https://github.com/ReverseToshi/HackNotts24",
         "liveDemo": "https://ReverseToshi.github.io/portfolio-website"
     }
