Added hotel management highlight

--- a/assets/jsons/projects.json
+++ b/assets/jsons/projects.json
@@ -8,12 +8,12 @@
         "liveDemo": "https://ReverseToshi.github.io/portfolio-website"
     },
     {
-        "name": "Graphing tool",
-        "description": "A c++ program that allows user to graph functions and equations.\nIt is a simple tool that can be used to visualize mathematical functions.",
-        "technologies": ["C++", "wxWidgets"],
-        "highlight":"./assets/images/cREDIT.png",
-        "repository": "https://github.com/ReverseToshi/Graphing-tool",
-        "liveDemo": "https://ReverseToshi.github.io/task-manager"
+        "name": "Hotel Management System",
+        "description": "A hotel management system that allows user to manage hotel bookings and reservations.\nIt is a simple tool that can be used to manage hotel bookings.",
+        "technologies": ["Python", "sqlite3", "tkinter"],
+        "highlight":"./assets/images/hotel.png",
+        "repository": "https://github.com/ReverseToshi/HackNotts24",
+        "liveDemo": "https://ReverseToshi.github.io/portfolio-website"
     },
     {
         "name": "Motorola 68k Simulator",
@@ -24,11 +24,11 @@
         "liveDemo": "https://ReverseToshi.github.io/weather-app"
     },
     {
-        "name": "Hotel Management System",
-        "description": "A hotel management system that allows user to manage hotel bookings and reservations.\nIt is a simple tool that can be used to manage hotel bookings.",
-        "technologies": ["Python", "sqlite3", "tkinter"],
+        "name": "Graphing tool",
+        "description": "A c++ program that allows user to graph functions and equations.\nIt is a simple tool that can be used to visualize mathematical functions.",
+        "technologies": ["C++", "wxWidgets"],
         "highlight":"./assets/images/cREDIT.png",
-        "repository": "https://github.com/ReverseToshi/HackNotts24",
-        "liveDemo": "https://ReverseToshi.github.io/portfolio-website"
+        "repository": "https://github.com/ReverseToshi/Graphing-tool",
+        "liveDemo": "https://ReverseToshi.github.io/task-manager"
     }
 ]
